force-app/main/default/objects/Student__c/fields/Graduate__c.field-meta.xml
<CustomField>
    <fullName>Graduate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduate</label>
    <type>Checkbox</type>
</CustomField>