force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <inlineHelpText>Select the hobby</inlineHelpText>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Carrom</fullName>
            </value>
            <value>
                <fullName>Basket ball</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>