force-app/main/default/objects/Student__c/fields/Linkdin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linkdin_Profile__c</fullName>
    <label>Linkdin Profile</label>
    <type>Url</type>
</CustomField>