force-app/main/default/objects/Student__c/fields/Registration_Date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_and_time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Registration Date and time</label>
    <type>DateTime</type>
</CustomField>