force-app/main/default/objects/Student__c/fields/Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee__c</fullName>
    <label>Registration Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>