force-app/main/default/objects/Student__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technology__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Devops</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Machine Learning</fullName>
            </value>
            <value>
                <fullName>Data Intuition</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Lightening aura component</fullName>
            </value>
            <value>
                <fullName>API Autmation &amp; Testing</fullName>
            </value>
            <value>
                <fullName>IP Networking</fullName>
            </value>
            <value>
                <fullName>Hardware Interfacing</fullName>
            </value>
            <value>
                <fullName>Data Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>