force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>This field requires the student name</description>
    <inlineHelpText>Please enter the name</inlineHelpText>
    <label>Student Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>