force-app/main/default/objects/Student__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud computing</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Internet of things</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>