force-app/main/default/objects/Student__c/fields/X12th_percentage__c.field-meta.xml
<CustomField>
    <fullName>X12th_percentage__c</fullName>
    <label>12th percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>